# busyq

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  PLAN.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: check-base-image.yml  docker-publish.yml  docker-validate.yml
config/: busybox.config
patches/bash/: 001-applet-command-lookup.patch  002-applet-execute.patch  003-static-link-fixes.patch
patches/busybox/: 001-remove-main.patch  002-namespace-prefix.patch  003-applet-table-export.patch
patches/curl/: 001-embedded-certs.patch  002-extra-certs-envvar.patch
patches/jq/: 001-static-build-fixes.patch
ports/busyq-bash/: alpine-source.cmake  applet-command-lookup.patch  applet-execute.patch  portfile.cmake  vcpkg.json
ports/busyq-bc/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-beep/: portfile.cmake  vcpkg.json
ports/busyq-busybox/: gen_busyq_applets.sh  portfile.cmake  remove-main.patch  vcpkg.json
ports/busyq-bzip2/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-coreutils/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-cpio/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-curl/: alpine-source.cmake  embedded-certs.patch  extra-certs-envvar.patch  portfile.cmake  vcpkg.json
ports/busyq-diffutils/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-dos2unix/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-ed/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-findutils/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-gawk/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-gawk/patches/custom/: fix-extension-makefile-sed.patch
ports/busyq-grep/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-gzip/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-hostname/: hostname.c  portfile.cmake  vcpkg.json
ports/busyq-iputils/: ping.c  portfile.cmake  vcpkg.json
ports/busyq-jq/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-less/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-lsof/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-lzop/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-netcat/: nc.c  portfile.cmake  vcpkg.json
ports/busyq-patch/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-procps/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-psmisc/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-reset/: portfile.cmake  reset.c  vcpkg.json
ports/busyq-sed/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-sharutils/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-strings/: portfile.cmake  strings.c  vcpkg.json
ports/busyq-tar/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-time/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-wget/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-which/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-whois/: portfile.cmake  vcpkg.json  whois.c
ports/busyq-xz/: alpine-source.cmake  portfile.cmake  vcpkg.json
ports/busyq-zip/: alpine-source-unzip.cmake  alpine-source-zip.cmake  portfile.cmake  vcpkg.json
ports/lzo/: portfile.cmake  vcpkg.json
scripts/: build.sh  busyq-scan  convert_portfiles.sh  convert_ports_to_compile_time_prefix.py  dev-container.sh  download-sources.sh  fix_portfiles.py  gen-applet-table.sh  generate-certs.sh  sync-alpine.sh
scripts/cmake/: busyq_alpine_helpers.cmake  busyq_symbol_helpers.cmake
src/: applet_table.c  applet_table.h  applets.c  applets.def  applets.h  bb_namespace.h  busyq_scan.h  busyq_scan_main.c  busyq_scan_walk.c  main.c  ssl_client_mbedtls.c
triplets/: arm64-linux.cmake  x64-linux.cmake
